Update webpack.config to be able to use images

--- a/src/template.html
+++ b/src/template.html
@@ -8,11 +8,14 @@
 <body>
   <header>
     <nav>
+      <img class="logo" src="img/restaurant-logo.svg">
       <button type="button">Home</button>
       <button type="button">Menu</button>
       <button type="button">About</button>
     </nav>
   </header>
-  <div id="content"></div>
+  <div id="content">
+    <img src="img/home1.jpg">
+  </div>
 </body>
 </html>
